--- a/index.html
+++ b/index.html
@@ -1,58 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
-    <title>Document</title>
+   <link rel="stylesheet" href="./style/style.css">
+    <script src="https://kit.fontawesome.com/73d62dd04a.js" crossorigin="anonymous"></script>
+    <title>el callabo loco</title>
 </head>
+
 <body>
-    <h1>Caballitos</h1>
-    <hr>
-    <div class="bloque">
-        <div class="container">
-            <img src="./imagenes/WhatsApp Image 2022-09-10 at 8.56.22 PM (1).jpeg"
-                alt="">
-                <h3></h3>
-        </div>
-        <div class="container">
-            <img src="./imagenes/WhatsApp Image 2022-09-10 at 8.56.22 PM (2).jpeg"
-                alt="">
-                <h3>FRISON</h3>
-        </div>
-        <div class="container">
-            <img src="./imagenes/WhatsApp Image 2022-09-10 at 8.56.22 PM (3).jpeg"
-                alt="">
-                <h3>FRISON</h3>
-        </div>
-        <div class="container">
-            <img src="./imagenes/WhatsApp Image 2022-09-10 at 8.56.22 PM.jpeg"
-                alt="">
-                <h3></h3>
+    <nav>
+        <input type="checkbox">
+        <section class="cont-menu">
+            <li>
+                <a href=""><i class="fa-solid fa-user"></i></a>
+                <a href="./productos.html"><i class="fa fa-shopping-cart"></i></a>
+                <a href="./caballos.html"><i class="fa-solid fa-horse-head"></i></a>
+                <a href="./info.html"><i class="fa-solid fa-circle-info"></i></a>
+            </li>
+        </section>
+    </nav>
+    <div class="cuadro-exotic">
+        <div class="texto">
+            <h1>caballo </h1>
+            <hr>
+            <p>caballo es una pagina especializada en el cuidado de los
+                equinos donde puedes encontrar informacon de calida sobre el
+                cuidado y el mantenimiento de ellos </p>
         </div>
     </div>
-    <div class="bloque">
-        <div class="container">
-            <img src="./imagenes/WhatsApp Image 2022-09-10 at 8.56.23 PM (1).jpeg"
-                alt="">
-                <h3></h3>
-        </div>
-        <div class="container">
-            <img src="./imagenes/WhatsApp Image 2022-09-10 at 8.56.23 PM (2).jpeg"
-                alt="">
-                <h3></h3>
-        </div>
-        <div class="container">
-            <img src="./imagenes/WhatsApp Image 2022-09-10 at 8.56.23 PM.jpeg"
-                alt="">
-                <h3>FRISON</h3>
-        </div>
-        <div class="container">
-            <img src="./imagenes/WhatsApp Image 2022-09-10 at 8.56.24 PM.jpeg"
-                alt="">
-                <h3></h3>
-        </div>
+    <div class="cuadro-exotic2">
+        <main class="contenedor">
+            <section class="tarjeta">
+                <div class="delante"><img src="./imagenes/bb5eb8fd4db5f91021b51f0cff382960.jpg" alt=""></div>
+            </section>
+            <section class="tarjeta">
+                <div class="delante"><img src="./imagenes/R.jpg" alt=""></div>
+            </section>
+            <section class="tarjeta">
+                <div class="delante"><img src="./imagenes/unnamed.jpg" alt=""></div>
+            </section>
+            <section class="tarjeta">
+                <div class="delante"><img src="./imagenes/WhatsApp Image 2022-09-10 at 8.56.22 PM.jpeg" alt=""></div>
+            </section>
+        </main>
     </div>
 </body>
+<footer>
+    <div class="redes">
+        <div class="boton">
+            <div class="icono">
+                <a href="https://www.facebook.com/ie.santaelena.3"><i class="fa-brands fa-facebook-f"></i></a>
+            </div>
+            <span>Facebook</span>
+        </div>
+        <div class="boton">
+            <div class="icono">
+                <a href="https://iesantaelena.edu.co/"><i class="fa-solid fa-circle"></i></a>
+            </div>
+            <span>Página IESE</span>
+        </div>
+    </div>
+</footer>
+
 </html>
