--- a/index.html
+++ b/index.html
@@ -12,57 +12,68 @@
 
 <body>
     <nav>
+        <img src="https://a0.muscache.com/im/pictures/user/520b3dd5-e86c-4828-8505-2cc17cc25d4f.jpg?aki_policy=profile_large" alt="">
         <input type="checkbox">
         <section class="cont-menu">
             <li>
-                <a href=""><i class="fa-solid fa-user"></i></a>
-                <a href="./productos.html"><i class="fa fa-shopping-cart"></i></a>
-                <a href="./caballos.html"><i class="fa-solid fa-horse-head"></i></a>
+                <a href=""><i class="fa-solid fa-calendar-check"></i></a>
+                <a href="./productos.html"><i class="fa-solid fa-image"></i></a>
                 <a href="./info.html"><i class="fa-solid fa-circle-info"></i></a>
             </li>
         </section>
     </nav>
     <div class="cuadro-exotic">
         <div class="texto">
-            <h1>caballo </h1>
-            <hr>
-            <p>caballo es una pagina especializada en el cuidado de los
-                equinos donde puedes encontrar informacon de calida sobre el
-                cuidado y el mantenimiento de ellos </p>
+            <h1>Alojamientos increibles</h1>
         </div>
     </div>
     <div class="cuadro-exotic2">
-        <main class="contenedor">
-            <section class="tarjeta">
-                <div class="delante"><img src="./imagenes/bb5eb8fd4db5f91021b51f0cff382960.jpg" alt=""></div>
-            </section>
-            <section class="tarjeta">
-                <div class="delante"><img src="./imagenes/R.jpg" alt=""></div>
-            </section>
-            <section class="tarjeta">
-                <div class="delante"><img src="./imagenes/unnamed.jpg" alt=""></div>
-            </section>
-            <section class="tarjeta">
-                <div class="delante"><img src="./imagenes/WhatsApp Image 2022-09-10 at 8.56.22 PM.jpeg" alt=""></div>
-            </section>
-        </main>
+        <div class="texto">
+            <h1>Una experiencia increible</h1>
+        </div>
     </div>
+    <div class="cuadro-exotic3">
+        <div class="logo">
+            <img src="https://a0.muscache.com/im/pictures/user/520b3dd5-e86c-4828-8505-2cc17cc25d4f.jpg?aki_policy=profile_large" alt="">
+        </div>
+        <div class="info">
+            <h1>Forest glampig</h1>
+            <p>somos un glampigubicado en el corregimiento de santa elena </p>
+        </div>
+    </div>
+    <div class="cuadro-exotic4">
+        <div class="info2">
+            <p>si te gusta el frio y la tranquilidad ven y disfruta de una experiencia unica con nosotros</p>
+        </div>
+    </div>
+    <div class="cuadro-exotic5">
+        <div class="logo2">
+            <img src="https://a0.muscache.com/im/pictures/user/520b3dd5-e86c-4828-8505-2cc17cc25d4f.jpg?aki_policy=profile_large" alt="">
+        </div>
+            <p>Corregimiento de Santa Elena- Vereda La palma  </p>
+            <p>Medellin</p>
+            <p> Colombia</p>
+        <div class="reserva">
+            <ul class="wrapper">
+                <li class="icon facebook">
+                    <span class="tooltip">Tik tok</span>
+                    <span><i class="fa-brands fa-tiktok"></i></span>
+                </li>
+                <li class="icon twitter">
+                    <span class="tooltip">Reserva</span>
+                    <span><i class="fa-solid fa-calendar-check"></i></span>
+                </li>
+                <li class="icon instagram">
+                    <span class="tooltip">Instagram</span>
+                    <span><i class="fab fa-instagram"></i></span>
+                </li>
+            </ul>
+        </div> 
+    </div>
+   
 </body>
 <footer>
-    <div class="redes">
-        <div class="boton">
-            <div class="icono">
-                <a href="https://www.facebook.com/ie.santaelena.3"><i class="fa-brands fa-facebook-f"></i></a>
-            </div>
-            <span>Facebook</span>
-        </div>
-        <div class="boton">
-            <div class="icono">
-                <a href="https://iesantaelena.edu.co/"><i class="fa-solid fa-circle"></i></a>
-            </div>
-            <span>Página IESE</span>
-        </div>
-    </div>
+    <p>Forest glampig</p>
 </footer>
 
 </html>
