--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <script src="https://kit.fontawesome.com/73d62dd04a.js" crossorigin="anonymous"></script>
     <title>el callabo loco</title>
 </head>
@@ -22,23 +22,36 @@
             </li>
         </section>
     </nav>
-    <div class="cuadro-exotic">
-        <div class="texto">
-            <h1>Alojamientos increibles</h1>
-        </div>
+    <div class="cuadro-exotic1">
+      <div class="slider"></div>
     </div>
     <div class="cuadro-exotic2">
         <div class="texto">
-            <h1>Una experiencia increible</h1>
+            <h1>Lideres en ventas de carnicos</h1>
+            <p>somos una empresa expecializada en la venta de carnicos y sus derivados</p>
         </div>
     </div>
     <div class="cuadro-exotic3">
-        <div class="logo">
-            <img src="https://a0.muscache.com/im/pictures/user/520b3dd5-e86c-4828-8505-2cc17cc25d4f.jpg?aki_policy=profile_large" alt="">
+        <div class="info">
+            <i class="fa-solid fa-drumstick-bite"></i>
+            <div class="bloque">
+                <h1></i>Nuestros productos</h1>
+              <p>carnes</p>
+             </div>
         </div>
         <div class="info">
-            <h1>Forest glampig</h1>
-            <p>somos un glampigubicado en el corregimiento de santa elena </p>
+            <i class="fa-solid fa-drumstick-bite"></i>
+            <div class="bloque">
+                <h1></i>Nuestros productos</h1>
+              <p>carnes</p>
+             </div>
+        </div>
+        <div class="info">
+            <i class="fa-solid fa-drumstick-bite"></i>
+            <div class="bloque">
+                <h1></i>Nuestros productos</h1>
+              <p>carnes</p>
+             </div>
         </div>
     </div>
     <div class="cuadro-exotic4">
@@ -75,5 +88,4 @@
 <footer>
     <p>Forest glampig</p>
 </footer>
-
 </html>
