--- a/index.html
+++ b/index.html
@@ -6,86 +6,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
+    <script src="./index.js"></script>
     <script src="https://kit.fontawesome.com/73d62dd04a.js" crossorigin="anonymous"></script>
-    <title>el callabo loco</title>
+    <title>carniceria</title>
 </head>
 
 <body>
     <nav>
-        <img src="https://a0.muscache.com/im/pictures/user/520b3dd5-e86c-4828-8505-2cc17cc25d4f.jpg?aki_policy=profile_large" alt="">
-        <input type="checkbox">
-        <section class="cont-menu">
-            <li>
-                <a href=""><i class="fa-solid fa-calendar-check"></i></a>
-                <a href="./productos.html"><i class="fa-solid fa-image"></i></a>
-                <a href="./info.html"><i class="fa-solid fa-circle-info"></i></a>
-            </li>
-        </section>
+        <li>
+            <a href="">Inicio</a>
+            <a href="">Quienes somos</a>
+        </li>
+        <img src="./imagenes/logocarne.jpg" alt="">
+        <li>
+            <a href="">Productos</a>
+            <a href="./productos.html">Contacto</a>
+        </li>
     </nav>
     <div class="cuadro-exotic1">
-      <div class="slider"></div>
+        <img src="./imagenes/AS-removebg-preview.png" alt="">
     </div>
     <div class="cuadro-exotic2">
         <div class="texto">
-            <h1>Lideres en ventas de carnicos</h1>
-            <p>somos una empresa expecializada en la venta de carnicos y sus derivados</p>
+            <h1>Nuestros productos</h1>
+            <p>son productos de alta calida los cuales son del campo colombiano
+                contamos con los mejores cortes y servicios para nuestros productos
+            </p>
+        </div>
+        <div class="texto2">
+            <a href="">
+                <div class="botones">
+                    <i class="fa-solid fa-cow"></i>
+                    <div class="info">
+                        <h4>res</h4>
+                        <p>res carne</p>
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="botones">
+                    <i class="fa-solid fa-piggy-bank"></i>
+                    <div class="info">
+                        <h4>cerdo</h4>
+                        <p>res carne</p>
+                    </div>
+                </div>
+            </a>
+            <a href="">
+                <div class="botones">
+                    <i class="fa-solid fa-drumstick-bite"></i>
+                    <div class="info">
+                        <h4>pollo</h4>
+                        <p>res carne</p>
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
-    <div class="cuadro-exotic3">
-        <div class="info">
-            <i class="fa-solid fa-drumstick-bite"></i>
-            <div class="bloque">
-                <h1></i>Nuestros productos</h1>
-              <p>carnes</p>
-             </div>
-        </div>
-        <div class="info">
-            <i class="fa-solid fa-drumstick-bite"></i>
-            <div class="bloque">
-                <h1></i>Nuestros productos</h1>
-              <p>carnes</p>
-             </div>
-        </div>
-        <div class="info">
-            <i class="fa-solid fa-drumstick-bite"></i>
-            <div class="bloque">
-                <h1></i>Nuestros productos</h1>
-              <p>carnes</p>
-             </div>
-        </div>
+    <div class="mapa">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d463.5251584926393!2d-75.49555875382457!3d6.233914035712934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e4427ba57cfd6ed%3A0x9cf641e74848383d!2sPUNTO%20DE%20VENTA%20LA%20GRANJA!5e0!3m2!1ses!2sco!4v1684432900628!5m2!1ses!2sco"
+            width="1350" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
-    <div class="cuadro-exotic4">
-        <div class="info2">
-            <p>si te gusta el frio y la tranquilidad ven y disfruta de una experiencia unica con nosotros</p>
-        </div>
-    </div>
-    <div class="cuadro-exotic5">
-        <div class="logo2">
-            <img src="https://a0.muscache.com/im/pictures/user/520b3dd5-e86c-4828-8505-2cc17cc25d4f.jpg?aki_policy=profile_large" alt="">
-        </div>
-            <p>Corregimiento de Santa Elena- Vereda La palma  </p>
-            <p>Medellin</p>
-            <p> Colombia</p>
-        <div class="reserva">
-            <ul class="wrapper">
-                <li class="icon facebook">
-                    <span class="tooltip">Tik tok</span>
-                    <span><i class="fa-brands fa-tiktok"></i></span>
-                </li>
-                <li class="icon twitter">
-                    <span class="tooltip">Reserva</span>
-                    <span><i class="fa-solid fa-calendar-check"></i></span>
-                </li>
-                <li class="icon instagram">
-                    <span class="tooltip">Instagram</span>
-                    <span><i class="fab fa-instagram"></i></span>
-                </li>
-            </ul>
-        </div> 
-    </div>
-   
 </body>
-<footer>
-    <p>Forest glampig</p>
-</footer>
+
 </html>
