--- a/index.html
+++ b/index.html
@@ -69,6 +69,53 @@
             width="1350" height="600" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+    <div class="cuadro-exotic3">
+        <div class="slider">
+            <ul class="slides">
+                <li>
+                    <h1>Horarios de atencion</h1>
+                    <p>Nuestros servicios van desde las 8am hasta las 8pm de lunes a sabado <br>
+                        Los domingos Nuestros servicios van desde las 8am hasta las 2pm
+                    </p>
+                </li>
+                <li>
+                    <h1>Politicas de domicilio</h1>
+                    <p>Nuestras politicas de domicilio son:</p>
+                    <p>
+                        *compras mayores a 50mil <br>
+                        *solo en el corregimiento de santa elena <br>
+                        *pagos por transferencia 
+                    </p>
+                </li>
+            </ul>
+            <div class="buttons">
+                <div class="next">&#10095;</div>
+                <div class="prev">&#10094;</div>
+            </div>
+        </div>
+    </div>
 </body>
-
+<footer>
+    <div class="imagen">
+        <img src="./imagenes/AS-removebg-preview.png" alt="">
+    </div>
+    <div class="contenido">
+        <div class="textos">
+            <h4>Contacto</h4>
+            <p>3147175537</p>
+        </div>
+        <div class="textos">
+            <h4>Horarios</h4>
+            <p>Nuestros servicios van desde las 8am hasta las 8pm de lunes a sabado <br>
+                Los domingos Nuestros servicios van desde las 8am hasta las 2pm
+            </p>
+        </div>
+        <div class="textos">
+            <h4>Direccion</h4>
+            <p>Vía Vda. Mazo, Santa Elena, Medellín, Antioquia</p>
+        </div> 
+        
+    </div>
+       
+</footer>
 </html>
