--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="">Inicio</a>
             <a href="">Quienes somos</a>
         </li>
-        <img src="./imagenes/logocarne.jpg" alt="">
+        <img src="./imagenes/Sin título-1_Mesa de trabajo 1.png" alt="">
         <li>
             <a href="">Productos</a>
             <a href="./productos.html">Contacto</a>
