--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav>
         <li>
-            <a href="">Inicio</a>
+            <a href="" class="activa">Inicio</a>
             <a href="">Quienes somos</a>
         </li>
         <img src="./imagenes/Sin título-1_Mesa de trabajo 1.png" alt="">
