--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </li>
     </nav>
     <div class="cuadro-exotic1">
-        <img src="./imagenes/AS-removebg-preview.png" alt="">
+        <img src="./imagenes/logo bn_Mesa de trabajo 1.png" alt="">
     </div>
     <div class="cuadro-exotic2">
         <div class="texto">
