cambios en pedidos

--- a/pedido.html
+++ b/pedido.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/pedido.css">
-    <script src="./index.js"></script>
     <script src="https://kit.fontawesome.com/73d62dd04a.js" crossorigin="anonymous"></script>
     <title>carniceria</title>
 </head>
@@ -47,10 +46,18 @@
             <p>costo</p>
         </div>
         <div class="direccion">
+            <h4>Nombre</h4>
+            <input type="text" placeholder="Nombre">
             <h4>Direccion</h4>
             <input type="text" placeholder="Direccion">
             <p>el costo del domicilio es de 10.000</p>
         </div>
-        <a href="">enviar</a>
+        <div class="cuadroo">
+            <h4>total</h4>
+            <p>costo</p>
+        </div>
+        <div class="boton">
+        <a href="">enviar</a> 
+        </div>
     </div>
 </body>
