--- a/contactos.html
+++ b/contactos.html
@@ -13,13 +13,13 @@
 <body>
     <nav>
         <li>
-            <a href="">Inicio</a>
-            <a href="">Quienes somos</a>
+            <a href="./index.html">Inicio</a>
+            <a href="./conocenos.html">Quienes somos</a>
         </li>
         <img src="./imagenes/Sin título-1_Mesa de trabajo 1.png" alt="">
         <li>
-            <a href="">Productos</a>
-            <a href="" class="activa">Contacto</a>
+            <a href="./pedido.html">Productos</a>
+            <a href="./contactos.html" class="activa">Contacto</a>
         </li>
     </nav>
     <div class="cuadro-exotic1">
