--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
     <nav>
         <li>
-            <a href="" class="activa">Inicio</a>
-            <a href="">Quienes somos</a>
+            <a href="./index.html" class="activa">Inicio</a>
+            <a href="./conocenos.html">Quienes somos</a>
         </li>
         <img src="./imagenes/Sin título-1_Mesa de trabajo 1.png" alt="">
         <li>
-            <a href="">Productos</a>
-            <a href="./productos.html">Contacto</a>
+            <a href="./pedido.html">Productos</a>
+            <a href="./contactos.html">Contacto</a>
         </li>
     </nav>
     <div class="cuadro-exotic1">
