--- a/conocenos.html
+++ b/conocenos.html
@@ -51,7 +51,31 @@
              </div>
         </aside>
         
-        <footer class="caja c5">FOOTER</footer>
+        <footer class="caja c5">
+           <div class="padre">
+            <div class="localizacion">
+            <div class="contacto">
+            <h1 class="info">Contacto</h1>
+            <p class="descripcion">3147175537</p>
+        </div>
+           <div class="contacto2">
+                <h1 class="info">Dirección</h1>
+                <p class="descripcion">Vía Vda. Mazo, Santa Elena, Medellín, Antioquia</p>
+</div></div>
+            <div class="horario">
+                <h1 class="info">Horario</h1>
+                <p class="descripcion">Nuestros servicios van desde las 8am hasta las 8pm de lunes a sabado
+                    Los domingos Nuestros servicios van desde las 8am hasta las 2pm</p>
+            </div>
+
+            <div class="redes">
+                <a href="" class="face"></a>
+                <a href="https://www.tiktok.com/@carniceria_andres_sierra?is_from_webapp=1&sender_device=pc" class="tiktok"></a>
+                <a href="" class="instagram"></a>
+            </div>
+          </div>
+        </footer>
+        
     </div>
 
 </body>
