--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </body>
 <footer>
     <div class="imagen">
-        <img src="./imagenes/AS-removebg-preview.png" alt="">
+        <img src="./imagenes/logo bn_Mesa de trabajo 1.png" alt="">
     </div>
     <div class="contenido">
         <div class="textos">
