pasando cada pagina al servidor

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
     <nav>
         <li>
-            <a href="./index.html" class="activa">Inicio</a>
-            <a href="./conocenos.html">Quienes somos</a>
+            <link href="./admin.html">hola</link>
+            <link href="./admin.html">
         </li>
         <img src="./imagenes/Sin título-1_Mesa de trabajo 1.png" alt="">
         <li>
-            <a href="./pedido.html">Productos</a>
-            <a href="./contactos.html">Contacto</a>
+            <link href="./admin.html">
+            <link href="./admin.html">
         </li>
     </nav>
     <div class="cuadro-exotic1">
